--- a/index.html
+++ b/index.html
@@ -9,14 +9,232 @@
       src="https://kit.fontawesome.com/a17b2b722d.js"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </head>
   <body>
-    <nav class="nav">
-      <div class="nav__container">
-        <figure class="nav__logo__wrapper">
-          <img src="assets/logo.png" alt="" class="nav__logo" />
-        </figure>
+    <!-- Navbar -->
+    <nav>
+      <div class="row nav__row">
+        <a href="#" class="nav__img__wrapper">
+          <img src="assets/logo.png" alt="" class="nav__img" />
+        </a>
+        <div class="nav__links">
+          <a href="" class="nav__link"> Home </a>
+          <a href="" class="nav__link"> About</a>
+          <a href="" class="nav__link"> Vehicle Models</a>
+          <a href="" class="nav__link"> Testimonials</a>
+          <a href="" class="nav__link"> Our Team</a>
+          <a href="" class="nav__link"> Contact</a>
+        </div>
+        <div class="nav__btns">
+          <a href="#" class="nav__link"> Sign In</a>
+          <button href="" class="nav__btns__register">Register</button>
+        </div>
+
+        <!-- menu for phone screeens -->
+        <button class="nav__menu" onclick="openMenu()">
+          <i class="fa-solid fa-bars"></i>
+        </button>
       </div>
     </nav>
+
+    <!-- closing menu -->
+    <nav class="menu">
+      <button class="menu__close" onclick="closeMenu()">
+        <i class="fa-solid fa-x"></i>
+      </button>
+      <div class="menu__links">
+        <a href="#" class="menu__link" onclick="closeMenu()"> Home </a>
+        <a href="#" class="menu__link" onclick="closeMenu()"> About </a>
+        <a href="#" class="menu__link" onclick="closeMenu()">
+          Vehicle Models
+        </a>
+        <a href="#" class="menu__link" onclick="closeMenu()"> Testimonials </a>
+        <a href="#" class="menu__link" onclick="closeMenu()"> Our Team </a>
+        <a href="#" class="menu__link" onclick="closeMenu()"> Contact </a>
+      </div>
+    </nav>
+
+    <!-- header -->
+    <header>
+      <div class="container">
+        <img src="assets/header-bg.png" alt class="header-bg" />
+        <div class="row header__row">
+          <div class="header__text">
+            <h4 class="header__text__subtitle">Plan your trip now</h4>
+            <h1 class="header__text__title">
+              Save <span class="" color-primary>big</span> with our car rental
+            </h1>
+            <p class="header__text__para">
+              Rent the car of your dreams. Unbeatable prices, unlimited miles,
+              flexible pick-up options and much more.
+            </p>
+            <div class="header__text__btns">
+              <button class="header__text__btn header__text__book">
+                <span class="header__text__btn__span">Book Ride</span>
+                <i class="fa-regular fa-circle-check"></i>
+              </button>
+              <button class="header__text__btn header__text__learn">
+                <span class="header__text__btn__span">Learn More</span>
+                <i class="fa-solid fa-angle-right"></i>
+              </button>
+            </div>
+          </div>
+          <figure class="header__img__wrapper">
+            <img src="assets/header-car.png" alt class="header-img" />
+          </figure>
+        </div>
+      </div>
+    </header>
+
+    <!-- Main -->
+    <main>
+ 
+      <section id="features">
+        <div class="container">
+          <div class="row features__row">
+            <h3 class="features__subtitle">Plan your trip now</h3>
+            <h2 class="features__title">Quick and easy car rental</h2>
+            <div class="features__list">
+              <div class="feature">
+                <div class="feature__img__wrapper">
+                  <img src="assets/feature-1.png" alt="" class="feature__img" />
+                </div>
+                <h4 class="feature__title">Select car</h4>
+                <p class="feature__para">
+                  We offers a big range of vehicles for all your driving needs.
+                  We have the perfect car to meet your needs
+                </p>
+              </div>
+              <div class="feature">
+                <div class="feature__img__wrapper">
+                  <img src="assets/feature-2.png" alt="" class="feature__img" />
+                </div>
+                <h4 class="feature__title">Contact Operator</h4>
+                <p class="feature__para">
+                  Our knowledgeable and friendly operators are always ready to
+                  help with any questions or concerns
+                </p>
+              </div>
+              <div class="feature">
+                <div class="feature__img__wrapper">
+                  <img src="assets/feature-3.png" alt="" class="feature__img" />
+                </div>
+                <h4 class="feature__title">Let's Drive</h4>
+                <p class="feature__para">
+                  Whether you're hitting the open road, we've got you covered
+                  with our wide range of cars
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+ 
+      <section id="banner">
+        <div class="banner__container">
+          <h2 class="banner__title">Save big with our cheap car rental!</h2>
+          <h3 class="banner__subtitle">Top Airports. Local Suppliers.
+            <span class="color-primary">24/7</span>
+            Support.
+          </h3>
+        </div>
+      </section>
+      <section id="choose">
+        <div class="container">
+          <div class="row choose__row">
+            <figure class="choose__img__wrapper">
+              <img src="assets/choose-car.png" alt="" class="choose__img">
+
+            </figure>
+            <div class="choose__content">
+              <div class="choose__text">
+                <h3 class="choose__text__subtitle">Why Choose Us</h3>
+                <h2 class="choose__text__title">
+                  Best valued deals you will ever find
+                </h2>
+                <p class="choose__text__para">Discover the best deals you'll ever find with our unbeatable offers. We're dedicated to providing you with the best value for your money, so you can enjoy top-quality services and products without breaking the bank. Our deals are designed to give you the ultimate renting experience, so don't miss out on your chance to save big.</p>
+                <button class="choose__text__btn">
+                  <span class="choose__text__btn__span">Find Details</span>
+                  <i class="fa-solid fa-angle-right"></i>
+                </button>
+              </div>
+              <div class="choose__features">
+                <div class="choose__feature">
+                  <figure class="choose__feature__img__wrapper">
+                    <img src="assets/choose-1.png" alt="" class="choose__feature___img">
+                  </figure>
+                  <div class="choose__feature__text">
+                    <h4 class="choose__feature__text__title">Cross Country Drive</h4>
+                    <p class="choose__feature__text__para">Take your driving experience to the next level with our top-notch vehicles for your cross-country adventures.</p>
+                  </div>
+                </div>
+                <div class="choose__feature">
+                  <figure class="choose__feature__img__wrapper">
+                    <img src="assets/choose-2.png" alt="" class="choose__feature___img">
+                  </figure>
+                  <div class="choose__feature__text">
+                    <h4 class="choose__feature__text__title">All Inclusive Pricing</h4>
+                    <p class="choose__feature__text__para">Get everything you need in one convenient, transparent price with our all-inclusive pricing policy.</p>
+                  </div>
+                </div>
+                <div class="choose__feature">
+                  <figure class="choose__feature__img__wrapper">
+                    <img src="assets/choose-3.png" alt="" class="choose__feature___img">
+                  </figure>
+                  <div class="choose__feature__text">
+                    <h4 class="choose__feature__text__title">No Hidden Charges</h4>
+                    <p class="choose__feature__text__para">Enjoy peace of mind with our no hidden charges policy. We believe in transparent and honest pricing.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+         
+         
+          </h3>
+        </div>
+      </section>
+      <section id="testimonials">
+        <div class="container">
+          <div class="row testimonials__row">
+            <h3 class="testimonials__subtitle">Reviewed by People</h3>
+            <h2 class="testimonials__title">Client's Testimonials</h2>
+            <p class="testimonials__para">Discover the positive impact we've made on the our clients by reading through their testimonials. Our clients have experienced our service and results, and they're eager to share their positive experiences with you.</p>
+            <div class="testimonials__list">
+              <div class="testimonial">
+                <p class="testimonial__review">"We rented a car from this website and had an amazing experience! The booking was easy and the rental rates were very affordable. "</p>
+                <div class="testimonial__info">
+                  <figure class="testimonial__info__img__wrapper">
+                    <img src="assets/testimonial-1.jpg" alt="" class="testimonial__info__img">
+                  </figure>
+                  <div class="testimonial__info__profile">
+                    <h4 class="testimonial__info__name">Parry Hotter</h4>
+                    <h5 class="testimonial__info__location">Belgrade</h5>
+                  </div>
+                  <i class="fa-solid fa-quote-right testimonial__info__icon"></i>
+                </div>
+              </div>
+              <div class="testimonial">
+                <p class="testimonial__review">"We rented a car from this website and had an amazing experience! The booking was easy and the rental rates were very affordable. "</p>
+                <div class="testimonial__info">
+                  <figure class="testimonial__info__img__wrapper">
+                    <img src="assets/testimonial-2.jpg" alt="" class="testimonial__info__img">
+                  </figure>
+                  <div class="testimonial__info__profile">
+                    <h4 class="testimonial__info__name">Ron Rizzly</h4>
+                    <h5 class="testimonial__info__location">Navi Sad</h5>
+                  </div>
+                  <i class="fa-solid fa-quote-right testimonial__info__icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="download">
+
+      </section>
+    </main>
   </body>
 </html>
