made website responsive

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
       <div class="menu__links">
         <a href="#" class="menu__link" onclick="closeMenu()"> Home </a>
         <a href="#" class="menu__link" onclick="closeMenu()"> About </a>
-        <a href="#" class="menu__link" onclick="closeMenu()">
-          Vehicle Models
-        </a>
+        <a href="#" class="menu__link" onclick="closeMenu()">Vehicle Models</a>
         <a href="#" class="menu__link" onclick="closeMenu()"> Testimonials </a>
         <a href="#" class="menu__link" onclick="closeMenu()"> Our Team </a>
         <a href="#" class="menu__link" onclick="closeMenu()"> Contact </a>
@@ -89,7 +87,6 @@
 
     <!-- Main -->
     <main>
- 
       <section id="features">
         <div class="container">
           <div class="row features__row">
@@ -130,7 +127,6 @@
           </div>
         </div>
       </section>
- 
       <section id="banner">
         <div class="banner__container">
           <h2 class="banner__title">Save big with our cheap car rental!</h2>
@@ -233,8 +229,73 @@
         </div>
       </section>
       <section id="download">
+        <div class="container">
+          <div class="row download__row">
+            <div class="download__text">
+              <h2 class="download__text__title">Download our app to get most out of it</h2>
+              <p class="download__text__para">Thrown shy denote ten ladies though ask saw. Or by to he going think order event music. Incommode so intention defective at convinced. Led income months itself and houses you.</p>
+              <div class="download__text__links">
+                <a href="#" class="download__text__link">
+                  <img src="assets/google-play.svg" alt="" class="download__text__link__img">
+                </a>
+                <a href="#" class="download__text__link">
+                  <img src="assets/app-store.svg" alt="" class="download__text__link__img">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+          <div class="footer__intro footer__content">
+            <h4 class="footer__intro__title">CAR Rental</h4>
+            <p class="footer__intro__para">We offer a big range of vehicles for all your driving needs. We have the perfect car to meet your needs.</p>
+            <div class="footer__intro__links">
+              <a href="tel:123456789" class="footer__intro__link">
+                <i class="fa-solid fa-phone footer__intro__link__icon"></i>
+                <span class="footer__intro__link__span">(123)-456-789</span>
+              </a>
+              <a href="mailto:carrental@gmail.com" class="footer__intro__link">
+                <i class="fa-solid fa-envelope footer__intro__link__icon"></i>
+                <span class="footer__intro__link__span">carrental@gmail.com</span>
+              </a>
+              <a href="https://xpeedstudio.com/" class="footer__intro__link">
+                Design by XspeedStudio
+              </a>
+            </div>
+          </div>
+          <div class="footer__company footer__content">
+            <h4 class="footer__company__title">Company</h4>
+            <div class="footer__company__links">
+              <a href="#" class="footer__company__link"> New York</a>
+              <a href="#" class="footer__company__link"> Careers</a>
+              <a href="#" class="footer__company__link"> Mobile</a>
+              <a href="#" class="footer__company__link"> Blog</a>
+              <a href="#" class="footer__company__link"> New York</a>
+            </div>
+          </div>
+          <div class="footer__hours footer__content">
+            <h4 class="footer__hours__title">Working hours</h4>
+            <div class="footer__hours__list">
+              <div class="footer__hours__time">Mon - Fri: 9:00AM - 9:00PM</div>
+              <div class="footer__hours__time">Sat: 9:00AM - 7:00PM</div>
+              <div class="footer__hours__time">Sun: Closed</div>
+            </div>
+          </div>
+          <div class="footer__email footer__content">
+            <h4 class="footer__email__title">Subscription</h4>
+            <p class="footer__email__para">Subscribe your Email address for latest news & updates.</p>
+            <form action="#" class="footer__email__form">
+              <input type="email" placeholder="Enter Email Address" class="footer__email__form__input">
+              <button class="footer__email__form__submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
